# audio-signals

./: README.md  main.py  pyproject.toml
literature/: hmm.py  pra_sw01-code-snippet.py  pra_sw02-code-snippet-1.py  pra_sw02-code-snippet-2.py  pra_sw02-code-snippet-3.py  pra_sw03-code-snippet.py  pra_sw04-code-snippet.py  w2v.py  wordnet.py
submissions/week01/: description.txt  insights.txt  playground.py  synth.py
submissions/week02/: analysis.py  analysis.txt
submissions/week03/: morse.py
submissions/week04/: model_tuned.py  print_summary.py
utils/: audio.py  hmm.py  loader.py  menu.py
