[project]
name = "bacher-audio"
version = "0.1.0"
description = "Pattern Recognition in Audio-Signals"
authors = [
    {name = "Dominik Bacher"}
]
readme = "README.md"
requires-python = "3.12.7"
dependencies = [
    "simpleaudio (>=1.0.4,<2.0.0)",
    "numpy (>=2.2.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
