[project]
name = "bacher-audio"
version = "0.1.0"
description = "Pattern Recognition in Audio-Signals"
authors = [
    {name = "Dominik Bacher"}
]
readme = "README.md"
requires-python = "3.12.7"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "pyaudio (>=0.2.14,<0.3.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
pyaudio = {allow-prereleases = true}
